<resources>
    <string name="app_name">GMAT Club Forum</string>
    <string name="app_title">GMAT Club</string>
    <string name="app_channel">GMAT Default</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web">Web</string>
    <string name="title_activity_auth">Auth</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_google_billing">Upgrade</string>

    <!-- Menu profile -->
    <string name="menu_profile_title">Profile</string>
    <string name="menu_profile_settings">Forum Settings</string>
    <string name="menu_profile_settings_notifications">App Settings</string>
    <string name="menu_profile_logout">Logout</string>
    <string name="menu_profile_error_log">My Error Log</string>
    <string name="menu_profile_bookmarks">My bookmarks</string>
    <string name="menu_profile_posts">My posts</string>
    <string name="menu_profile_profile_name">My Profile</string>


    <!-- Hamburger menu -->
    <string name="hm_forum">forum</string>
    <string name="hm_pms">Private Messages</string>
    <string name="hm_notifications">notifications</string>
    <string name="hm_practice">practice</string>
    <string name="hm_chat">chat</string>
    <string name="hm_reviews">reviews</string>
    <string name="hm_deals_discounts">deals and discounts</string>
    <string name="hm_advanced_search">advanced search</string>
    <string name="hm_new_posts">new posts</string>
    <string name="hm_app_feedback">app feedback</string>
    <string name="hm_unanswered">unanswered</string>
    <string name="hm_notification_settings">Notification Settings</string>

    <!--Menu strings-->
    <string name="menu_scan">Add New</string>
    <string name="menu_myProspect">My Prospects</string>
    <string name="menu_locations">My Locations</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_myScans">My Scans</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_facebook">FacebookActivity</string>

    <string name="facebook_app_id">188832947830704</string>
    <string name="fb_login_protocol_scheme">fb188832947830704</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="server_client_id">241911688286-hdgjh2o7dg42155d31ts4m9vitq8nf0h.apps.googleusercontent.com</string>

    <string name="default_notification_channel_id">gcNotifications</string>

    <string name="alert_dialog_offline_try_again">Try again</string>
    <string name="alert_dialog_offline_message">Try opening https://gmatclub.com/forum in your Phone’s browser.\nIf you are not able to connect, please email us your IP address to support@gmatclub.com and we will help with resolving it ASAP.\nYou can also try switching to a different WIFI network or use Cellular – this often resolves connectivity issues.</string>
    <string name="alert_dialog_settings">Settings</string>
    <string name="alert_dialog_network">Sorry! We seem to be having issues with your connection.</string>



    <string name="or">Or</string>
    <string name="button_login">Login</string>
    <string name="facebook_button_login">Login with Facebook</string>
    <string name="forgot">Forgot?</string>
    <string name="password">Password</string>
    <string name="message_error_login_password">Incorrect Login or Password</string>

    <!-- Reset password -->
    <string name="reset_password_description">It looks like you\'re having trouble with your password. Do you want to reset it?</string>
    <string name="reset_password_title">Incorrect Password</string>
    <string name="button_reset">Reset</string>
    <string name="button_not_now">Not now</string>

    <string name="email">Email</string>
    <string name="email_error">This must be E-mail address you registered your account with.</string>
    <string name="email_success_send">Your password has been sent successfully to your original e-mail address.</string>

    <string name="hm_decision_tracker">decision tracker</string>
    <string name="hm__mba_discussions">MBA Discussions</string>

    <string name="leave_feedback_yes_btn_text">Rate</string>
    <string name="leave_feedback_no_btn_text">No, thanks</string>
    <string name="leave_feedback_cancel_btn_text">May be, later</string>
    <string name="leave_feedback_tittle_text">Please Rate us</string>
    <string name="leave_feedback_message_text">How Would you Rate GMAT Club App?</string>
    <string name="login_with_google">Login with Google</string>

    <!--Default strings value for dialog-->
    <string name="dialog_title">Dialog tittle</string>
    <string name="dialog_message">Dialog message</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no">No</string>

    <!--Google Play Billing activity-->
    <string name="billing_tittle_quizzes">Quizzes</string>
    <string name="billing_tittle_android_platform">New future on the Android platform</string>
    <string name="billing_tittle_phrase_one">+ almost <b>1000</b> GMAT questions from Kaplan,\n Manhattan Prep, and other test prep companies.</string>
    <string name="billing_tittle_phrase_two">+ <b>15000+</b> GMAT questions from GMAT Club`s\n forum available <b>OFFLINE</b> with a problem -\n oriented interface.</string>
    <string name="billing_tittle_phrase_three">+ custom Quizzes &amp; tag filter will allow you to\n focus on weak areas to maximize effectiveness.</string>
    <string name="billing_tittle_subscription">1-Month Subscription</string>
    <string name="billing_tittle_subscription_price">\u0024 9.99</string>
    <string name="billing_tittle_subscription_free">Start your 1 week FREE trial\n then \u0024 9.99/month. Cancel anytime</string>
    <string name="billing_tittle_start_now">Start Now</string>
    <string name="billing_tittle_subscription_description">The subscriptions automatically renews unless auto-renew is turned off at least 24-hours before the end off the current period. Account will be charged for renewal within 24-hours prior to the end off the current period, and identify the cost of the renewal Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user`s Account Settings after purchase</string>
    <string name="billing_privacy_policy_tittle">Terms of Use and Privacy Policy</string>
    <string name="quizzes">Quizzes</string>
    <string name="learn_more">Learn more</string>
    <string name="msg_unknown_host">The information submitted could not be found.</string>
    <string name="app_feedback">GMAT Club Android Application Feedback</string>
    <string name="email_support">support@gmatclub.com</string>
    <string name="log_in_or_sign_up">Log in or sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="password_too_short">The password you entered is too short</string>
    <string name="invalid_email">The e-mail address you entered is invalid.</string>
    <string name="submit">Submit</string>
    <string name="new_pass_was_sent">New password was sent to provided Email. Please, check your email inbox.</string>

    <!-- 'id'     => '188832947830704',
    'secret' => '25e1ac94899287fbcbab95d769f5ac6f',-->
</resources>
