<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/alert_dialog_background_shape">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_gravity="center"
        style="@style/progressBar_style"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/btnProfileTitle"
                android:text="@string/reset_password_title"
                android:fontFamily="@font/opensans_bold"
                android:layout_centerHorizontal="true"
                style="@style/alert_subTitle"
                android:textColor="#2a2a2a"
                android:textSize="19sp"
                />

            <TextView
                android:id="@+id/message"
                android:text="Incorrect E-mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#e53a3a"
                android:textSize="11sp"
                android:fontFamily="@font/opensans_semibold_custom"
                android:layout_below="@+id/btnProfileTitle"
                android:layout_marginTop="13dp"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/resetPasswordMessageForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/message"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/forgotPasswordInputEmailError"
                    android:text="@string/reset_password_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2a2a2a"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="12sp"
                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/resetPasswordEmailForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/resetPasswordMessageForm"
                android:layout_marginTop="16dp"
                >

                <EditText
                    android:id="@+id/resetPasswordInputEmail"
                    style="@style/loginEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/resetPasswordInputEmailError"
                    android:text="@string/email_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#6d6d6d"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="11sp"
                    android:layout_marginTop="16dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/resetPasswordButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resetPasswordEmailForm"
                android:layout_marginTop="16dp"
                >
                <LinearLayout
                    android:id="@+id/btnResetLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:background="@drawable/background_button_login"
                    android:layout_weight="0.5"
                    android:backgroundTint="#9e9e9e"
                    >
                    <TextView
                        android:id="@+id/btnReset"
                        style="@style/alert_subTitle"
                        android:text="@string/button_reset"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnNotNowLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:background="@drawable/background_button_login"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="10dp"
                    >

                    <TextView
                        android:id="@+id/btnNotNow"
                        style="@style/alert_subTitle"
                        android:text="@string/button_not_now"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>